--- a/src/main.css
+++ b/src/main.css
@@ -5,4 +5,5 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    overflow: hidden;
 }
